# climate-platform

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  BUILD_PLAN_COMPREHENSIVE.md  DATABASE_SCHEMA_REGULATORY_V2.sql  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED_PRODUCTION.md  IMPLEMENTATION_ROADMAP_PHASED.md  PHASE5_COMPLETION.md  PHASE_0_QUICK_START.md  PHASE_0_STATUS.md  PRODUCTION_ROADMAP.md  REGULATORY_MAINTENANCE_ARCHITECTURE.md  REGULATORY_MATRIX_FINAL.md  REGULATORY_REQUIREMENTS_MATRIX.md  ROADMAP_COMPLETE_12DAYS.md  UI_ENHANCEMENT_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.claude/: launch.json
aftershock_forecasts/: demo_event_001_forecast.json
api/: auth.py  deps.py  main.py
canonical_scores/: seismic_scores_20260625_200648.json
core/: config.py  h3_utils.py  netcdf_utils.py  types.py
data/: expanded_seismic_ground_truth.json  expanded_seismic_ground_truth_with_targets.json  seismic_ground_truth.json
docs/: SEISMIC_PRODUCT_ROADMAP.md  investor_brief.html  investor_brief.md  objection_tracker.md
migrations/: 001_initial_schema.sql  002_complete_schema_regulatory_crcs.sql
models/: etas_aftershock_24h_model.pkl  etas_aftershock_24h_scaler.pkl  etas_aftershock_72h_model.pkl  etas_aftershock_72h_scaler.pkl  etas_aftershock_7d_model.pkl  precursor_risk_elevation_model.pkl  precursor_window_duration_model.pkl  precursor_window_duration_scaler.pkl  seismic_damage_model.pkl  seismic_damage_scaler.pkl  seismic_risk_model.pkl  seismic_risk_scaler.pkl
scripts/: augment_seismic_ground_truth.py  backfill_emsc_historical.py  backfill_historical.py  create_regulatory_package.py  csep_validation_framework.py  fetch_real_earthquake_data.py  (+14 more)
(+117 files in other folders)
