[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "ml*", "api*"]

[project]
name = "climate-platform"
version = "0.1.0"
description = "Climate intelligence platform — physical risk scoring for financial institutions"
requires-python = ">=3.9"
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Core numerics
    "numpy>=1.26",
    "pandas>=2.2",
    # H3 geospatial indexing
    "h3>=4.0",
    # Config
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# API service — no satellite I/O, no GDAL
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    # ML inference only (scoring engine)
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
]
# Satellite ingestion workers — needs GDAL, HDF5, NetCDF
ingest = [
    "rasterio>=1.3",
    "xarray>=2024.1",
    "pyproj>=3.6",
    "cdsapi>=0.7",
    "netCDF4>=1.6",
    "httpx>=0.27",
]
# ML training — everything above + SHAP
train = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
]
# Full local dev — everything
all = [
    "climate-platform[api,ingest,train]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires running PostgreSQL (port 5433)",
]

[tool.ruff]
line-length = 100
target-version = "py39"
